changed box shadow and fixed code button spacing when there is no live button. removed gap and instead added margin right to live button

--- a/src/index.css
+++ b/src/index.css
@@ -321,9 +321,11 @@ h2 {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  gap: .75rem;
+  /* gap: .75rem; */
 
 }
+
+
 
 
 h3 {
@@ -375,6 +377,10 @@ h3 {
   border-radius: 5px;
 }
 
+.live-button {
+  margin-right: .75rem;
+}
+
 .code-button, .linkedin{
   background-color: #FFFCF8;
   border: solid 1px #FF634A;
@@ -389,7 +395,7 @@ a {
 
 .project-card img {
   border-radius: 20px;
-  box-shadow: 0 5px 6px 1px rgba(0, 0, 0, .2);
+  box-shadow: 0 2px 18px 1px rgba(0, 0, 0, .1);
 }
 
 /* education css */
